# SandboxOS

./: README.md  index.md
carts/commerceos/commerceos/: .gitignore  AGENTS.md  CLAUDE.md  README.md  backlog.md  pyproject.toml
carts/commerceos/commerceos/.claude/agents/: README.md  analyst.md  (+3 more)
carts/commerceos/commerceos/commerceos/: __init__.py  db.py  stores.py
carts/commerceos/commerceos/packs/: INDEX.md  RUNBOOK.md
carts/commerceos/commerceos/scripts/: a6_prove.py
carts/commerceos/commerceos/spec/: build.md  challenge.md  experience-catalog.md  experience.md  inventory.md  jtbd.md
carts/commerceos/commerceos/stores/: registry.json
carts/commerceos/commerceos/tests/: conftest.py  test_analyst.py  test_board_web.py  test_books_import.py  test_boot.py  test_catalog_audit.py  test_catalog_classification.py  test_catalog_dashboard.py  test_catalog_delist.py  test_catalog_lifecycle.py  test_catalog_workflows.py  test_collection_executor.py  test_connector_shopify.py  test_content_agent.py  test_control_loop.py  test_delist_web.py  test_economics.py  test_emitters.py  test_facts_store.py  test_fleet_manifest.py  test_fleet_widening.py  test_fusion_render.py  test_gate.py  test_ledger.py  test_merchandising.py  test_merchandising_web.py  test_p204_comma_format.py  test_p500_twin_cassette.py  test_phone_refusal.py  test_product_state_executor.py  test_proposer.py  test_quality.py  test_register_sweep.py  test_rhythm.py  test_seeds.py  test_seo_executor.py  test_seo_feature.py  test_seo_feature_web.py  test_sf1_lints.py  test_spec_verification_executor.py  (+19 more)
(+148 files in other folders)
