[project]
name = "commerceos"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "sse-starlette>=3.4.5",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
# no .pytest_cache written into the cartridge — it only cluttered the
# channel's session digests. the check text stays as ratified.
addopts = "-p no:cacheprovider"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["commerceos"]
